# OpenNTRIPClient

./: .gitattributes  .gitignore  CHANGELOG.md  CREDITS.md  Cargo.toml  README.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml  deny.toml
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml  build.rs
crates/app/src/: audio.rs  bus.rs  lib.rs  logging.rs  main.rs  paths.rs  profiles.rs  selftest.rs  settings.rs  state.rs
crates/app/src/ui/: about.rs  bottom_tabs.rs  connlog_window.rs  gga_section.rs  log_pane.rs  main_window.rs  mod.rs  ntrip_block.rs  options_dialog.rs  plot_panel.rs  profiles_dialog.rs  rtcm_inspector.rs  serial_block.rs  sourcetable_browser.rs  status_strip.rs  stream_summary.rs  text.rs  theme.rs
crates/app/src/workers/: mod.rs  ntrip.rs  serial.rs  tls.rs
crates/app/tests/: worker_mock.rs
crates/geodb/: Cargo.toml
crates/geodb/src/: fold.rs  format.rs  lib.rs
crates/geodb/tests/: embedded.rs  fixture.rs
crates/gnss/: Cargo.toml
crates/gnss/examples/: deframe.rs
crates/gnss/src/: clock.rs  geodesy.rs  gga.rs  lib.rs  nmea.rs
crates/gnss/src/rtcm/: crc24q.rs  decode.rs  frame.rs  mod.rs
crates/ntrip-core/: Cargo.toml
crates/ntrip-core/examples/: probe.rs
crates/ntrip-core/src/: base64.rs  chunked.rs  lib.rs  request.rs  session.rs  sourcetable.rs
crates/ntrip-core/tests/: mock_caster.rs  session_flows.rs  session_hfix1.rs
docs/: design-guide.md  one-surface.md  parity-checklist.md  protocol-notes.md  signing.md  user-guide.md
tools/geodb-gen/: .gitignore  Cargo.toml  README.md
tools/geodb-gen/src/: main.rs
